# AutoLabelWithYolo

./: README.md  annotation.py  dialogs.py  image_editor.py  main.py  project.py  pyproject.toml  ui.py  utils.py
