[project]
name = "AutoLabelWithYolo"
version = "0.1.0"
description = "自动标注工具-Yolo模型"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pyside6>=6.9.1",
    "sympy==1.13.3",
    "ultralytics>=8.3.183",
    "torch~=2.7.1",
    "torchvision==0.22.1"
]

[tool.uv.sources]
torch = { "index" = "pytorch" }
torchvision = { "index" = "pytorch" }

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
